# tft-arena

./: .gitignore  .markdownlint.json  README.md  docker-compose.dev.yml  docker-compose.linux.yml  docker-compose.yml  mise.toml  render.yaml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt  verify_db.py
backend/app/: config.toml  main.py
backend/app/agents/: context.py  graph.py  memory.py  state.py
backend/app/agents/nodes/: agent.py  router.py  semantic.py
backend/app/agents/presets/: contrarian_futurist.md  devils_advocate.md  ethos_architect.md  first_principles_thinker.md  historian.md  logos_architect.md  muse.md  pathos_architect.md  reframer.md  socrates.md  steelman.md
backend/app/api/: __init__.py  agents.py  auth.py  avatars.py  chat.py  config.py  control.py  gauntlet.py  messages.py  providers.py  rooms.py  settings.py
backend/app/core/: config.py  deps.py  llm.py  locks.py  route_policy.py  security.py  utils.py  websockets.py
backend/app/models/: __init__.py  db.py  init_db.py  schema.py
backend/app/schemas/: pydantic_models.py
backend/app/services/: gauntlet.py  prompt_loader.py
backend/app/services/chat_runtime/: __init__.py  events.py  inference.py  persistence.py  queries.py  semantic_pipeline.py  state.py
backend/tests/: conftest.py  test_api_routes.py  test_arena.py  test_chat_websocket.py  test_router_node.py  test_semantic_node.py  test_utils.py  test_websockets_manager.py
frontend-arena/: Dockerfile  Dockerfile.dev  package.json  tsconfig.app.json
frontend-gauntlet/: Dockerfile.dev  (+5 more)
(+59 files in other folders)
