[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tft-arena-backend"
version = "0.1.0"
description = "FastAPI + LangGraph backend for TFT Arena"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=1.5.0",
  "fastapi>=0.135.0",
  "google-auth>=2.49.0",
  "httpx>=0.28.0",
  "langchain-community>=0.4.0",
  "langchain-core>=1.2.0",
  "langgraph>=1.1.0",
  "litellm>=1.82.0",
  "pydantic>=2.12.0",
  "python-jose[cryptography]>=3.5.0",
  "pyyaml>=6.0.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
